--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,50 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: 'UrbaneRounded';
+  src: url('/fonts/UrbaneRounded-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UrbaneRounded';
+  src: url('/fonts/UrbaneRounded-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UrbaneRounded';
+  src: url('/fonts/UrbaneRounded-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UrbaneRounded';
+  src: url('/fonts/UrbaneRounded-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UrbaneRounded';
+  src: url('/fonts/UrbaneRounded-DemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UrbaneRounded';
+  src: url('/fonts/UrbaneRounded-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UrbaneRounded';
+  src: url('/fonts/UrbaneRounded-Heavy.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
